--- a/index.html
+++ b/index.html
@@ -4,11 +4,4 @@
   <meta charset="UTF-8">
   <title>Malla Interactiva - Economía</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Malla Interactiva - Economía</h1>
-  <div id="malla"></div>
-
-  <script src="script.js"></script>
-</body>
-</html>
+  <style>
