--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ body {
 </head>
 <body>
   <h1>Malla Interactiva - Economía</h1>
-  <div id="malla"></div>
+  <div id="malla" class="malla-por-ciclos">
+</div>
 
   <script src="script.js"></script>
 </body>
